# lifelog

./: .gitignore  AGENTS.md  AGENT_TASK.md  AVA_CHEN_UX_REVIEW_ANALYSIS.md  AVA_CHEN_UX_REVIEW_ROUND_2.md  CARLOS_MENDEZ_ANALYSIS.md  CLAUDE.md  CONTRIBUTING.md  Cargo 2.toml  Cargo.toml  DEMO_READINESS_REPORT.md  DESIGN.md  Dockerfile  ELISE_TANAKA_RUST_REVIEW_ANALYSIS.md  INITIAL_PROMPT.md  INTEGRATION_TEST_PLAN.md  KWAME_ASANTE_ANALYSIS.md  LARGE_REFACTOR_PREPARATION.md  LESSONS.md  MIGRATION_PLAN.md  OMAR_HASSAN_ANALYSIS.md  PLAN.md  PLAN_TO_FIX_RENDERING.md  PRIVACY.md  README.md  REFACTOR_DATABASE_PLAN.md  REFACTOR_TODOLIST.md  RENA_KAZAKOV_AUDIT_REPORT.md  SENIOR_DATA_ENGINEER_ANALYSIS.md  SPEC.md  SPEC_FROM_ARTIFACTS.md  SPEC_TODOLIST.md  SPEC_TO_RECREATE_PROJECT.md  STATE_HISTORY.md  STATUS.md  STATUS_TODOLIST.md  SYSTEMS_ARCHITECT_ANALYSIS.md  USAGE.md  VALIDATION_SUITE.md  asdf.nix  (+25 more)
.cargo/: config.toml
.claude/: settings.json
.gemini/: AGENT_SYSTEM_PROMPT.md
collector/: Cargo.toml  build.rs
collector/src/: collector.rs  grpc-client.rs  lib.rs  logger_controller.rs  main.rs  setup.rs
collector/src/collector/: upload_manager.rs
collector/src/modules/: audio.rs  browser_history.rs  camera.rs  clipboard.rs  data_source.rs  evdev_input_logger.rs  hyprland.rs  input_logger.rs  keystrokes.rs  logger.rs  microphone.rs  mod.rs  mouse.rs  processes.rs  screen.rs  shell_history.rs  text_upload.rs  weather.rs  window_activity.rs
collector/tests/: smoke_bin.rs
common/config/: .AmbientConfig.type.json  .AudioConfig.type.json  .BrowserHistoryConfig.type.json  .BrowserHistoryType.type.json  .CameraConfig.type.json  .CollectorConfig.type.json  .Config.type.json  .GeoConfig.type.json  .HyprlandConfig.type.json  .InputLoggerConfig.type.json  .KeyboardConfig.type.json  .MicrophoneConfig.type.json  .MouseConfig.type.json  .NetworkConfig.type.json  .ProcessesConfig.type.json  .Resolution.type.json  .ScreenConfig.type.json  .ServerConfig.type.json  .SystemConfig.type.json  .SystemPerformanceConfig.type.json  .TextUploadConfig.type.json  .WeatherConfig.type.json  .WifiConfig.type.json  Cargo.toml
common/config/src/: collector_config.rs  lib.rs  policy_config.rs  server_config.rs
common/data-modalities/: .BrowserFrame.type.json  .FrameMetadata.type.json  .OcrFrame.type.json  .ScreenFrame.type.json  .SnapshotFrame.type.json  .crFrame.type.json  Cargo.toml  build.rs  expanded_screen_frame.rs
common/data-modalities/src/: lib.rs
common/data-modalities/src/browser/: data.rs
common/data-modalities/src/browser_history/: data.rs
common/data-modalities/src/ocr/: mod.rs
common/data-modalities/src/screen/: data.rs  transforms.rs
common/lifelog-core/: .CollectorState.type.json  .ServerState.type.json  Cargo.toml  build.rs
common/lifelog-core/src/: correlation.rs  data_sources.rs  error.rs  lib.rs  replay.rs  system_state.rs  time_skew.rs  validate.rs
common/lifelog-proto/: Cargo.toml  build.rs
common/lifelog-proto/src/: lib.rs
common/lifelog-types/: .ActorConfig.type.json  .CollectorState.type.json  .DataModality.type.json  .InterfaceState.type.json  .ServerActionType.type.json  .ServerCommand.type.json  .ServerState.type.json  .SystemState.type.json  Cargo.toml  build.rs
common/lifelog-types/src/: lib.rs  validate.rs
common/macros/: Cargo.toml
common/macros/src/: lib.rs
common/utils/: Cargo.toml
common/utils/src/: buffer.rs  cas.rs  chunk.rs  ingest.rs  lib.rs
interface/src-tauri/: Cargo.toml  Cargo.toml.bak  build.rs  tauri.conf.json
interface/src-tauri/capabilities/: main.json
interface/src-tauri/src/: grpc_client.rs  lib.rs  main.rs  setup.rs  storage.rs  timestamp_serde.rs
interface/src-tauri/src/modules/: hyprland.rs  logger.rs  microphone.rs  screen.rs  text_upload.rs
lifelog-interface/lifelog/src-tauri/: Cargo.toml  tauri.conf.json
lifelog-interface/lifelog/src-tauri/data/text_uploads/: text_uploads.db
lifelog-interface/lifelog/src-tauri/screenshots/: screen.db
lifelog-interface/lifelog/src-tauri/src/: main.rs
logger/: Cargo.toml
logger/src/: install.rs  lib.rs  logger_controller.rs  main.rs  setup.rs
logger/src/modules/: camera.rs  evdev_input_logger.rs  hyprland.rs  input_logger.rs  logger.rs  microphone.rs  mod.rs  processes.rs  screen.rs  text_upload.rs  weather.rs
logger/src/proto/: controller.proto
mcp/: Cargo.toml
mcp/src/: main.rs
server/: .env.example  Cargo.toml  README.md  build.rs
server/migrations/: 20260303143000_init_postgres.sql  20260322000000_transform_pipeline.sql  20260323000000_unified_frames.sql  20260323100000_migrate_to_frames.sql  20260323200000_drop_legacy_tables.sql  20260323300000_dynamic_search_doc.sql  20260323400000_drop_transform_jobs.sql  20260323500000_transform_idempotency.sql  20260324000000_fix_keystroke_modality.sql  20260324100000_smart_search_doc.sql
server/src/: auth.rs  auth_handlers.rs  cors.rs  data_retrieval.rs  db.rs  db_config.rs  embed.rs  error.rs  frames.rs  grpc.rs  grpc_service.rs  handlers.rs  ingest.rs  install.rs  jobs.rs  lib.rs  main.rs  media_proxy.rs  mod.rs  ocr.rs  policy.rs  postgres.rs  process_data.rs  query.rs  replay.rs  retention.rs  schema.rs  server.rs  surreal_types.rs  sync.rs  text-embedding.rs  transform.rs
server/src/frames/: db.rs  deserialize.rs  mod.rs  serialize.rs  tests.rs
server/src/query/: ast.rs  executor.rs  llql.rs  mod.rs  natural.rs  planner.rs
server/src/transform/: activity.rs  browser_topic.rs  dag.rs  egress.rs  llm.rs  location.rs  meeting.rs  mod.rs  ocr.rs  sound.rs  stt.rs  summary.rs  watermark.rs  worker.rs  writer.rs
server/tests/: all_modalities_dataflow.rs  bin_e2e.rs  canonical_llql_example.rs  collector_multi_modality_flow.rs  controlplane_upload_trigger.rs  cross_modal_query.rs  during_query.rs  multi_device.rs  ocr_pipeline.rs  performance_suite.rs  replay_query.rs  smoke_server_bin.rs  sync_scenarios.rs  validation_suite.rs  within_query.rs
server/tests/harness/: assertions.rs  device_client.rs  event_gen.rs  fault_layer.rs  mod.rs  simulated_modalities.rs
server/tests/scenarios/: generators.rs  mod.rs
(+306 files in other folders)
