[workspace]
members = [
    "common/data-modalities",
    "collector",
    "server",
    "common/utils",
    "common/config",
    "common/lifelog-core",
    "common/macros",
    "interface/src-tauri",
    # "common/transforms"
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
surrealdb = "1.0.0"

