[workspace]
members = [
    "common/config",
    "common/data-modalities",
    "collector",
    "server",
    "common/utils",
    "common/lifelog-core",
    "common/macros",
    "interface/src-tauri",
    "common/lifelog-proto",
    "common/transforms"
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
tracing-subscriber = "0.3"
thiserror = "2.0.12"
anyhow = "1.0"
log = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
surrealdb = "2.3.1"
tonic-build = "0.13.1"
dashmap = "6.1.0"
tonic-reflection = { version = "0.13", features = ["server"] }
toml = { version = "0.8.20"}


# Dependencies for streaming 
once_cell = "1.21.3"
futures-core = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["full"] }
