[workspace]
members = [
    "common/config",
    "common/data-modalities",
    "collector",
    "server",
    "common/utils",
    "common/lifelog-core",
    "common/macros",
    "interface/src-tauri",
    "common/lifelog-proto",
    "common/lifelog-types",
]

# Keep the Tauri UI crate in the workspace, but don't build it by default.
# It pulls in native GUI deps (e.g. glib/gtk) that aren't needed for most
# backend/collector development or CI checks.
default-members = [
    "common/config",
    "common/data-modalities",
    "collector",
    "server",
    "common/utils",
    "common/lifelog-core",
    "common/macros",
    "common/lifelog-proto",
    "common/lifelog-types",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
tonic = "0.13.1"
prost = "0.13.5"
prost-types = "0.13.5"
prost-build = "0.13.1"
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
config = "0.15.11"
tracing-subscriber = "0.3"
thiserror = "2.0.12"
anyhow = "1.0"
log = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
surrealdb = "2.3.1"
tonic-build = "0.13.1"
dashmap = "6.1.0"
tonic-reflection = { version = "0.13", features = ["server"] }
toml = { version = "0.8.20"}
rusty-tesseract = { version = "1.1.0"}
image = { version = "0.25.6" , features = ["jpeg", "png","webp"]} 


# Dependencies for streaming 
once_cell = "1.21.3"
futures-core = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["full"] }

[workspace.lints.clippy]
# Panic prevention — warn now, deny after cleanup
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
# Enforce structured logging
print_stdout = "warn"
print_stderr = "warn"
# Catch large async state machines
large_futures = "warn"
