[package]
name = "lifelog-collector"
version = "0.1.0"
edition = "2021"
description = "A project to log, process, and interact with various sources of data for your lifelog"

[dependencies]
utils = { path = "../common/utils" }
config = { path = "../common/config" }
lifelog-macros = { path = "../common/macros"}
lifelog-core = {path="../common/lifelog-core"}
lifelog-types = {path="../common/lifelog-types"}

# Inherit workspace dependencies where possible
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] } # Inherit from workspace

sha2 = "0.10"
toml = "0.5"
evdev = "0.13"         
dirs = "4.0"
hyprland = "0.4.0-beta.1"
users = "0.11"
sysinfo = "0.29"
hound = "3.5.1"
reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.1"
clap = { version = "4", features = ["derive"] } 
crossbeam-channel = "0.5"
rdev = "0.5"
image = "0.25"
cpal = "0.15.3"
async-trait = "0.1"
surrealdb = "2.2.2"
mobc = "0.8.5"
derive_more = { version = "2.0.1", features = ["full"] }
mobc-surrealdb = "0.2.0"

#gRPC
prost-types = { workspace = true }

[build-dependencies]
# Specify version directly, don't inherit from workspace dependencies
tonic-build = "0.9" # Match version used in interface

[dependencies.uuid]
version = "1.16.0"
# Lets you generate random UUIDs
features = [
    "v6",
]

[target.'cfg(target_os = "linux")'.dependencies]
rscam = { version = "0.5.5"}


[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3.8.1"

[features]
dev= []

[dev-dependencies]
anyhow = "1"

# Collector-specific dependencies (if any remain)
dashmap = "5.5"
