[package]
name = "lifelog-collector"
version = "0.1.0"
edition = "2021"
description = "A project to log, process, and interact with various sources of data for your lifelog"

[dependencies]
utils = { path = "../common/utils" }
config = { path = "../common/config" }
lifelog-macros = { path = "../common/macros"}
lifelog-core = {path="../common/lifelog-core"}
lifelog-types = {path="../common/lifelog-types"}
lifelog-proto = { path = "../common/lifelog-proto" }
data-modalities = { path = "../common/data-modalities" } 

# Inherit workspace dependencies where possible
tonic = { workspace = true }
prost = { workspace = true }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true, features = ["bundled"] } 

sha2 = "0.10"
toml = "0.5"
evdev = "0.13"         
dirs = "4.0"
hyprland = "0.4.0-beta.1"
users = "0.11"
sysinfo = "0.24" # TODO: Change this to version 0.35 and refactor the other code
hound = "3.5.1"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5", features = ["derive"] } 
crossbeam-channel = "0.5"
rdev = "0.5"
image = "0.25"
cpal = "0.15.3"
async-trait = "0.1"
surrealdb = "2.2.2"
mobc = "0.8.5"
derive_more = { version = "2.0.1", features = ["full"] }
mobc-surrealdb = "0.2.0"
tonic-reflection = { version = "0.13.1", features = ["server"] }
rand = "0.9.1"
tokio-stream = { version = "0.1.17", features = ["full"] }
futures-core = "0.3.31"


dashmap = {workspace = true}

prost-types = { workspace = true }

[build-dependencies]
tonic-build = {workspace = true}

[target.'cfg(target_os = "linux")'.dependencies]
rscam = { version = "0.5.5"}

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3.8.1"

[features]
dev= ["config/dev"]

[dev-dependencies]
anyhow = "1"

