[package]
name = "lifelog-mcp"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "lifelog-mcp"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
uuid = { version = "1", features = ["serde"] }
toml = { workspace = true }
