[package]
name = "lifelog-server"
version = "0.1.0"
edition = "2021"
description = "A project to log, process, and interact with various sources of data for your lifelog"

[[bin]]
name = "lifelog-server-backend"
path = "src/main.rs"

[dependencies]
utils = { path = "../common/utils" }
config = { path = "../common/config" }
lifelog-core = {path = "../common/lifelog-core/"}
lifelog-macros = { path = "../common/macros" }
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
chrono = "0.4"
thiserror = "2"
serde_json = "1.0"
clap = "4.5.37"
# rust-bert = "0.23.0"
surrealdb = { version = "2.2.2", features = ["kv-mem", "kv-surrealkv"] }
async-trait = "0.1.88"
serde = { version = "1.0.219", features = ["derive"] }
tonic = { workspace = true, features = ["transport"] }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = { version = "0.9.2"}
dashmap = "6.1.0"
toml = { version = "0.8.20"}
lifelog-types = {path = "../common/lifelog-types/"}

[build-dependencies]
tonic-build = "0.9.2"
