[package]
name = "lifelog-server"
version = "0.1.0"
edition = "2021"
description = "A project to log, process, and interact with various sources of data for your lifelog"

[lints]
workspace = true

[[bin]]
name = "lifelog-server-backend"
path = "src/main.rs"

[dependencies]
config = { path = "../common/config" }
utils = { path = "../common/utils" }
lifelog-core = {path = "../common/lifelog-core/"}
lifelog-proto = { path = "../common/lifelog-proto" }
lifelog-macros = { path = "../common/macros" }
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
chrono = "0.4"
thiserror = "2"
anyhow = {workspace = true}
serde_json = "1.0"
clap = "4.5.37"
surrealdb = {workspace = true}
async-trait = "0.1.88"
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true, features = ["transport"] }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-reflection = {workspace = true}
dashmap = {workspace = true}
lifelog-types = {path = "../common/lifelog-types/"}
data-modalities = { path = "../common/data-modalities" } # TODO: refactor, we shouldn't be needing to import this
toml = {workspace = true}
once_cell = {workspace = true}
futures-core = {workspace = true}
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = { version = "0.35.0", features = ["network", "multithread", "disk"] }
tokio-stream = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}

[build-dependencies]
tonic-build = {workspace = true}

[dev-dependencies]
tempfile = "3"
portpicker = "0.1"

[features]
dev = ["config/dev"] # Have config look for dev.toml
