[package]
name = "lifelog-server"
version = "0.1.0"
edition = "2021"
description = "A project to log, process, and interact with various sources of data for your lifelog"

[lints]
workspace = true

[[bin]]
name = "lifelog-server-backend"
path = "src/main.rs"

[[bin]]
name = "lifelog"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }
config = { path = "../common/config" }
utils = { path = "../common/utils" }
lifelog-core = {path = "../common/lifelog-core/"}
lifelog-types = { path = "../common/lifelog-types", features = ["full", "surrealdb"] }
tokio = { version = "1.44.2", features = ["full", "macros", "rt-multi-thread"] }
chrono = "0.4"
thiserror = "2"
anyhow = {workspace = true}
serde_json = "1.0"
clap = { version = "4.5.37", features = ["derive"] }
surrealdb = {workspace = true}
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
async-trait = "0.1.88"
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true, features = ["transport", "tls-ring", "tls-native-roots"] }
tonic-health = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
pbjson-types = "0.7"
tonic-reflection = {workspace=true}
tonic-web = {workspace=true}
dashmap = {workspace=true}
data-modalities = { path = "../common/data-modalities" } # TODO: refactor, we shouldn't be needing to import this

toml = {workspace = true}
once_cell = {workspace = true}
futures-core = {workspace = true}
strum = { version = "0.27.1", features = ["derive"] }
sysinfo = { version = "0.35.0", features = ["network", "multithread", "disk"] }
tokio-stream = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
inquire = "0.7"
rcgen = "0.13"
tokio-rustls = "0.26"
rustls = "0.23"
sha2 = "0.10"
base64 = "0.22"
directories = { workspace = true }

[build-dependencies]
tonic-build = {workspace = true}

[dev-dependencies]
lifelog-collector = { path = "../collector" }
tempfile = "3"
portpicker = "0.1"
rand = "0.9"
rand_chacha = "0.9"
tower = "0.5"
proptest = "1.6"
pretty_assertions = "1.4"
http = "1"
testcontainers = "0.23"

[features]
dev = ["config/dev"] # Have config look for dev.toml
