
[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
lifelog-macros = { path = "../macros" }
serde = { version = "1.0", features = ["derive"] }
utils = { path = "../utils" }
dirs-next = "2.0"
toml = "0.8"
chrono = "0.4"
thiserror = "2"
serde_json = "1.0"
anyhow = "1.0"
cpal = "0.15.3"

[features]
dev = []
