
[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
lifelog-macros = { path = "../macros" }
lifelog-types = {path = "../lifelog-types"}
serde = { version = "1.0", features = ["derive"] }
utils = { path = "../utils" }
dirs-next = "2.0"
toml = "0.8"
chrono = "0.4"
thiserror = "2"
serde_json = "1.0"
anyhow = "1.0"
cpal = "0.15.3"
derive_more = { version = "2.0.1", features = ["full"] }
dashmap = { version = "6.1", features = ["serde"] }

[features]
dev = []
