
[package]
name = "config"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
lifelog-core = { path = "../lifelog-core" }
serde = { version = "1.0", features = ["derive"] }
utils = { path = "../utils" }
directories = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
cpal = "0.15.3"
derive_more = { version = "2.0.1", features = ["full"] }
dashmap = { version = "6.1", features = ["serde"] }
lifelog-types = { path = "../lifelog-types" }
tracing = { workspace = true }


[features]
dev = []
