[package]
name="data-modalities"
edition="2021"
version="0.1.0"

[lints]
workspace = true

[dependencies]
lifelog-core= { path = "../lifelog-core" }
lifelog-proto = { path = "../lifelog-proto" }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.1"
rusty-tesseract = {workspace = true}
utils = { path = "../utils" }
image = {workspace = true}
thiserror = {workspace=true}
tracing = {workspace = true}

prost-types = { version = "0.13.5"}
tonic = { version = "0.13.1"}
pbjson-types = "0.7"
