[package]
name = "lifelog-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
proptest = { version = "1.6.0"}
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v6"] }
tracing = { version = "0.1", features = ["log"] }
pretty_assertions = { version = "1.4.1", features = ["std"] }
dashmap = { version = "6.1.0", features = ["serde"] }
tonic = { version = "0.13.1" }
lifelog-proto = { path = "../lifelog-proto" }
