[package]
name="lifelog-proto"
edition="2021"
version="0.1.0"

[dependencies]
tonic = { version = "0.13.1" }
prost = { version = "0.13.5"}
prost-types = { version = "0.13.5"}

[build-dependencies]
tonic-build = { version = "0.13.1" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
maplit = "1.0"
