[package]
name="lifelog-proto"
edition="2021"
version="0.1.0"

[lints]
workspace = true

[dependencies]
tonic = { version = "0.13.1" }
prost = { version = "0.13.5"}
prost-types = { version = "0.13.5"}
serde = { version = "1.0", features = ["derive"] }
pbjson = "0.7"
pbjson-types = "0.7"

[build-dependencies]
tonic-build = { version = "0.13.1" }
pbjson-build = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
maplit = "1.0"
protoc-bin-vendored = "3.2.0"

[dev-dependencies]
serde_json = "1.0"