[package]
name="lifelog-types"
edition="2021"
version="0.1.0"

[dependencies]
uuid = { version = "1.16", features = ["v6"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
lifelog-core = { path = "../lifelog-core" }
lifelog-macros = { path = "../macros" }
dashmap = { version = "6.1", features = ["serde"] }
lifelog-proto = { path = "../lifelog-proto" }
prost-types = { version = "0.13.5"}
tokio = { version = "1.44.2", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
