[package]
name="lifelog-types"
edition="2021"
version="0.1.0"

[dependencies]
uuid = { version = "1.16", features = ["v6"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
lifelog-core = { path = "../lifelog-core" }
lifelog-macros = { path = "../macros" }
dashmap = { version = "6.1", features = ["serde"] }
lifelog-proto = { path = "../lifelog-proto" }
tokio = { version = "1.44.2", features = ["full"] }
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = { version = "0.27.1"}
thiserror = {workspace=true}
image = {workspace = true}
prost = {workspace = true}
prost-types = {workspace = true}
toml = {workspace = true}


[build-dependencies]
tonic-build = { version = "0.13.1", features = ["prost"] }
