[package]
name="lifelog-types"
edition="2021"
version="0.1.0"

[lints]
workspace = true

[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
pbjson = "0.7"
pbjson-types = "0.7"
lifelog-core = { path = "../lifelog-core", optional = true }
tracing = { workspace = true }
rand = { version = "0.9.1", optional = true }
image = { workspace = true, optional = true }

[build-dependencies]
tonic-build = { version = "0.13.1" }
pbjson-build = "0.7"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
maplit = "1.0"
protoc-bin-vendored = "3.2.0"

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["full"]
full = ["lifelog-core", "rand", "image"]