[package]
name="lifelog-macros"
edition="2021"
version="0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
uuid = { version = "1.16", features = ["v6"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = { version = "1.0"}
lifelog-core = { path = "../lifelog-core" }
