[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
directories = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
proptest = "1.6"
