[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
thiserror = { workspace = true }
image = { workspace = true }
directories = { workspace = true }
sha2 = "0.10"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1", features = ["fs", "io-util", "sync"] }
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
proptest = "1.6"
