[package]
name = "lifelog-interface"
version = "0.1.0"
description = "UI Interface for Lifelog"
authors = ["you"]
edition = "2021"
default-run = "lifelog-interface"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lifelog_interface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
utils = {path = "../../common/utils"}
config = {path = "../../common/config"}
data-models = {path = "../../common/data-models"}

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.7", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-dialog = "2.0.0-beta.2"
rusqlite = { version = "0.34.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10.6"
sysinfo = "0.24"
bytes = "1.5"
dirs = "5.0.1"
base64 = "0.21.0"
async-trait = "0.1"

# Cross-platform dependencies
toml = "0.5"
thiserror = "1"
users = "0.11"
hound = "3.5.1"
reqwest = { version = "0.11", features = ["json"] }
rocket = "0.5.1"
clap = "3.2.25"
crossbeam-channel = "0.5"
rdev = "0.5"
anyhow = "1.0"
log = "0.4"
image = "0.24"
cpal = "0.15.3"
bincode = "1.3"

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
rscam = "0.5.5"
hyprland = "0.4.0-beta.1"
evdev = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3.8.1"

[features]
# This makes the binary built into this lib available as a normal executable that embeds the app as
# well. Mainly useful during development. The executable is the name of the package.
default = []
custom-protocol = ["tauri/custom-protocol"]
dev = []
# Machine learning support (disabled by default)
ml = ["tch"]

# Optional tch dependency for ML features
[dependencies.tch]
version = "0.9"
optional = true

