[package]
name = "lifelog-interface"
version = "0.1.0"
description = "UI Interface for Lifelog"
authors = ["you"]
edition = "2021"
default-run = "lifelog-server-frontend"

[[bin]]
name = "lifelog-server-frontend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lifelog_interface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# Define build dependencies directly, don't inherit from workspace dependencies
tonic-build = { workspace = true }
prost-build = { workspace = true }

[dependencies]
utils = {path = "../../common/utils"}
config = {path = "../../common/config", features = ["dev"] } # FIX: change this back

serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tauri = { version = "2.0.0-beta.7", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-dialog = "2.0.0-beta.2"
rusqlite = { workspace = true, features = ["bundled"] }
tokio = { workspace = true, features = ["full", "macros", "rt-multi-thread"] }
chrono = { workspace = true, features = ["serde"] }
sha2 = "0.10.6"
sysinfo = "0.29.11"
bytes = { workspace = true }
dirs = "5.0.1"
base64 = "0.21.0"
async-trait = "0.1"
# Use Rustls so we don't require system OpenSSL headers/libs for development/CI.
reqwest = { version = "0.11", default-features = false, features = ["json", "multipart", "rustls-tls"] }

# Cross-platform dependencies
toml = "0.5"
thiserror = { workspace = true }
users = "0.11"
hound = "3.5.1"
rocket = "0.5.1"
clap = "3.2.25"
crossbeam-channel = "0.5"
rdev = "0.5"
anyhow = { workspace = true }
log = { workspace = true }
image = "0.24"
cpal = "0.15.3"
bincode = "1.3"

# Inherit gRPC deps from workspace
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# Platform-specific dependencies
[target.'cfg(target_os = "linux")'.dependencies]
rscam = "0.5.5"
hyprland = "0.4.0-beta.1"
evdev = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
tempfile = "3.8.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
dev = ["config/dev"]
