[package]
name = "lifelog-interface"
version = "0.1.0"
description = "UI Interface for Lifelog"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lifelog_interface_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.7", features = ["macos-private-api"] }
tauri-plugin-shell = "2.0.0-beta.3"
tauri-plugin-dialog = "2.0.0-beta.2"
rusqlite = { version = "0.34.0", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
sha2 = "0.10.6"
sysinfo = "0.24"
bytes = "1.5"
dirs = "5.0.1"
base64 = "0.21.0"

# Path dependency to access the main lifelog crate
lifelog = { path = "../../../" }

